# Code-PatchAgent_Agentic-AI

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
agents/: planner.py  reader.py  reviewer.py  writer.py
api/: index.py
git_utils/: clone_repo.py
prompts/planner/: prompt.py  schema.py
prompts/reader/: compliance.py  prompt.py  schema.py
prompts/reviewer/: prompt.py  schema.py
prompts/writer/: prompt.py  schema.py
public/: app.js  index.html  style.css
rag/: embedding.py  indexer.py  loader.py  manifest.py  retriever.py  splitter.py  vector_store.py
reviewer/: static_validator.py  syntax.py
tests/: index.py  planner_test.py  reader.py  review_test.py  writer_test.py
