[project]
name = "autopr-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=26.5.1",
    "chromadb>=1.5.9",
    "gitpython>=3.1.50",
    "isort>=8.0.1",
    "langchain>=1.3.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.6",
    "langchain-openai>=1.3.4",
    "langchain-text-splitters>=1.1.2",
    "langchain-tools>=0.1.34",
    "langgraph>=1.2.8",
    "pydantic>=2.13.4",
    "pygithub>=2.9.1",
    "pypdf>=6.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "ruff>=0.15.20",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "tqdm>=4.68.4",
    "transformers>=5.13.0",
    "tree-sitter>=0.26.0",
    "tree-sitter-languages>=1.10.2",
    "typing-extensions>=4.16.0",
    "unstructured>=0.24.0",
]
