[project]
name = "autopr-ai"
version = "0.1.0"
description = "Agentic multi-agent code generation and logic review pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.5.9",
    "pysqlite3-binary>=0.5.0",
    "gitpython>=3.1.50",
    "langchain>=1.3.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-mistralai>=1.1.6",
    "langchain-openai>=1.3.4",
    "langchain-text-splitters>=1.1.2",
    "langchain-tools>=0.1.34",
    "langgraph>=1.2.8",
    "pydantic>=2.13.4",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "tiktoken>=0.13.0",
    "tqdm>=4.68.4",
    "typing-extensions>=4.16.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.4.0",
]
